worked on handel the OTP retived
